OpenItem migration
