# openapi.yaml
@@ -78,6 +78,33 @@ paths:
           description: Not Found
         '500':
           description: Internal Server Error
+  
+  /invoices/openitems:
+    get:
+      tags:
+        - invoices
+      summary: Get open items
+      description: Get open items
+      operationId: getOpenItems
+      responses:
+        '200':
+          description: OK
+          content:
+            application/json:
+              schema:
+                type: array
+                items:
+                  $ref: '#/components/schemas/OpenItem'
+        '400':
+          description: Bad Request
+        '401':
+          description: Unauthorized
+        '403':
+          description: Forbidden
+        '404':
+          description: Not Found
+        '500':
+          description: Internal Server Error
 
       
 components:
@@ -326,7 +353,7 @@ components:
           type: string
           format: date
           description: The transaction date of the payment.
-          example: 2021-01-01 
+          example: 2021-01-01
 
     Tax:
       type: object
@@ -341,4 +368,85 @@ components:
           format: double
           example: 0.05 
 
-
+    OpenItem:
+        type: object
+        properties:
+          invoiceId:
+            type: integer
+            format: int32
+            example: 4
+          orderId:
+            type: integer
+            format: int32
+            example: 4
+          bpartnerId:
+            type: integer
+            format: int32
+            example: 4
+          bpartnerLocationId:
+            type: integer
+            format: int32
+            example: 4
+          currencyId:
+            type: integer
+            format: int32
+            example: 4
+          documentNo:
+            type: string
+            description: The document number of the invoice.
+            example: 1000001
+          description:
+            type: string
+            description: The description of the invoice.
+            example: Invoice for order 1000001
+          docStatus:
+            type: string
+            description: The document status of the invoice.
+            example: CO
+          isSOTRX:
+            type: boolean
+            description: The transaction type is sale or purchase.
+            example: true
+          isActive:
+            type: boolean
+            description: The invoice is active.
+            example: true
+          dateOrdered:
+            type: string
+            format: date
+            description: The order date of the invoice.
+            example: 2021-01-01
+          dateInvoiced: 
+            type: string
+            format: date
+            description: The invoice date of the invoice.
+            example: 2021-01-01
+          dueDate: 
+            type: string
+            format: date
+            description: The due date of the invoice.
+            example: 2021-01-01
+          netDays:
+            type: integer
+            format: int32
+            example: 20
+          totalLines:
+            type: number
+            description: The total lines of the invoice.
+            format: double
+            example: 100.00
+          grandTotal: 
+            type: number
+            description: The grand total of the invoice.
+            format: double
+            example: 100.00
+          openAmt:  
+            type: number
+            description: The open amount of the invoice.
+            format: double
+            example: 100.00
+          paidAmt:
+            type: number
+            description: The paid amount of the invoice.
+            format: double
+            example: 100.00
